docs: move task tracking from per-task issues to per-phase issues
The plan tables become the single source of truth; one issue per phase serves as the external summary and commits carry Task: instead of mandatory Refs. Also records that packaging=pom belongs to P0-02, the Executors ban belongs to ArchUnit, and Boot 4 starters are named webmvc/flyway.

Signed-off-by: Ember452 <252594880+Ember452@users.noreply.github.com>